--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "testing",
     "ui"
   ],
-  "repository": "https://github.com/wearefriday/spectre",
+  "repository": "https://github.com/carmenmitru/spectre-1",
   "success_url": "/",
   "scripts": {
     "postdeploy": "bundle exec rake db:create && bundle exec rake db:schema:load"
